--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilo.css">
     <title>JavaScript</title>
+    <script src="./js/script.js" defer></script>
+
+    
+
+    <!--<script>
+        /*Comentario de linha
+        /* comentaria de
+        varias 
+        linhas 
+        var nome = "jose"; // Declaração de variavel com valor
+        let idade = 25; // Declaração de variavel com valor
+        const altura = 1.70;//declarção de constante com valor
+        console.log(nome + "tem " + idade + "anos e mede " + altura + "m.");//impressao de tela do navegador
+
+        nome = 100
+        console.log (`Novo valor da variável ${nome}`) */
+    </script> -->
 </head>
 
 <body>
@@ -21,5 +38,8 @@
         </nav>
     </header> 
 
+    <button id="botao">testar botão</button>
+
+    
 </body>                     
 </html>
