Iniciando conceitos básicos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilo.css">
     <title>JavaScript</title>
+    <script src="./js/script.js" defer></script>
+<!-- 
+    <script>
+        //Comentário de linha
+         /*
+          Comentário 
+          de
+           várias 
+          linhas 
+        */
+        var nome = "José"; //Declaração de variável com valor
+        let  idade = 25;   //Declaração de variável com valor
+        const altura = 1.70;//Declaração de constante com valor
+        console.log(nome + " tem " +idade+ " anos e mede "+altura+"m.");//Impressão na tela do navegador
+    </script> -->
 </head>
 
 <body>
@@ -20,6 +35,6 @@
             </ul>
         </nav>
     </header> 
-
+    <button id="botao">Clique aqui</button>
 </body>                     
 </html>
