--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilo.css">
     <title>JavaScript</title>
+
+    <script src="./js/script.js"></script>   
+
 </head>
 
 <body>
@@ -20,6 +23,9 @@
             </ul>
         </nav>
     </header> 
+
+    <button id="botao">Testar botão</button>
+    
 
 </body>                     
 </html>
