--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilo.css">
     <title>JavaScript</title>
+
 </head>
 
 <body>
     
     <header id="topo">
-        <h1 id="titulo">JavaScript</h1>
         <nav>
             <ul>
                 <li class="link"><a href="#">JavaScript</a></li>
@@ -20,6 +20,8 @@
             </ul>
         </nav>
     </header> 
+    <button id="botao">Testar Botão</button>
 
+    <script src="./js/script.js"></script>
 </body>                     
 </html>
