--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilo.css">
     <title>JavaScript</title>
+    <script src="./js/script.js" defer></script>    
+
 </head>
 
 <body>
@@ -20,6 +22,9 @@
             </ul>
         </nav>
     </header> 
+    
+    <button id="botao">Testar botão</button>
 
+    
 </body>                     
 </html>
