--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             </ul>
         </nav>
     </header> 
+    
+    <button id="botao">Testar botão</button>
+    <script src="./js/script.js"></script>
 
 </body>                     
 </html>
