--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <li class="link"><a href="#">C#</a></li>
             </ul>
         </nav>
-    </header> 
-
-</body>                     
+        <button style="width: 250px; height: 250px;" id="butao">butao</button>
+    </header>
+    <script src="./js/script.js" defer></script> 
+</body>                      
 </html>
