como funciona js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilo.css">
     <title>JavaScript</title>
+
+    <script src="./js/script.js" defer></script> <!--Serve para pegar a referência da página js-->
+
+
+
+    <!-- <script>
+        //comentário de linha
+        /* Comentário
+        de
+        várias
+        linhas
+        */
+        var nome ="José"; //Declaração de varíavel com valor
+        let idade = 25; //Declaração de varíavel com valor
+        const altura = 1.70; //Declaração de constante com valor (não podemos mudar a constante)
+        console.log(nome + " tem " +idade+ " anos e mede "+altura+"m."); //Impressão na tela do navegador
+
+        nome = 100;
+        console.log('Novo valor da variável ${nome}'); 
+
+        <button onclick="console.error('Não é um erro!')">Testar botão</button>
+
+     <script>
+        alert("Olá Mundo!");  /*Função que abre uma janela modal*/
+    </script> Só vamos usar js externo por causa que é mais correto
+
+
+    </script> -->
+
 </head>
 
 <body>
@@ -20,6 +49,8 @@
             </ul>
         </nav>
     </header> 
+    <button id="botao">Testar botão</button>
+
 
 </body>                     
 </html>
