--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    
     <header id="topo">
         <nav>
             <ul>
@@ -23,5 +22,13 @@
     <button id="botao">Testar Botão</button>
 
     <script src="./js/script.js"></script>
+
+    <ul class="menu">
+        <li>Item-1</li>
+        <li>Item-2</li>
+        <li>Item-3</li>
+        <li>Item-4</li>
+        <li>Item-5</li>
+    </ul>
 </body>                     
 </html>
