--- a/index.html
+++ b/index.html
@@ -49,7 +49,35 @@
             </ul>
         </nav>
     </header> 
-    <button id="botao">Testar botão</button>
+    
+    <div>
+        <h2>VALIDAÇÃO</h2>
+        <div>
+            <span class="valida"></span>
+        </div>
+        <div>
+            <form action="./index.html" method="post" onsubmit="return tradicional()">
+                <fieldset>
+                    <legend>LOGIN</legend>
+                    <div>
+                        <label for="idEmail">Email</label>
+                        <input type="email" name="txtEmail" id="idEmail" placeholder="Digite seu email">
+                    </div>
+                    <div>
+                        <label for="idSenha">Senha</label>
+                        <input type="password" name="txtSenha" id="idSenha" placeholder="Digite sua senha">
+                    </div>
+                    <div>
+                        <input type="checkbox" name="txtLembrar" id="idLembrar" value="lembrete" checked>
+                        <label for="idLembrar">Lembrar-me</label>
+                    </div>
+                    <div>
+                        <button type="submit">Enviar</button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </div>
 
 
 </body>                     
