redirect e funcoes com js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div>
     <h2>VALIDAÇÃO</h2>
     <div>
-        <form action="./index.html" method="post" onsubmit="return tradicional()">
+        <form action="./index.html" method="get" onsubmit="return validar()">
             <fieldset>
                 <legend>LOGIN</legend>
                 <div>
