--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span class="valida"></span>
         </div>
         <div>
-            <form action="index.php" method="post">
+            <form action="index.html" method="post" onsubmit="return validar()">
                 <fieldset>
                     <legend>LOGIN</legend>
                     <div>
