--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span class="valida"></span>
         </div>
         <div>
-            <form action="./index.html" method="get" onsubmit="return tradicional()">
+            <form action="./index.html" method="get" onsubmit="return validar(idEmail,idSenha)">
                 <fieldset>
                     <legend>LOGIN</legend>
                     <div>
