--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 <div>
     <h2>VALIDAÇÃO</h2>
     <div>
-        <form action="./index.html" method="get" onsubmit="return validar()">
+        <span class="valida"></span>
+    </div>
+    <div>
+        <form action="./index.html" method="get" onsubmit="return validar(idEmail, idSenha)">
             <fieldset>
                 <legend>LOGIN</legend>
                 <div>
@@ -53,7 +56,7 @@
                     <label for="idLembrar">Lembrar-me</label>
                 </div>
                 <div>
-                    <button type="button" id="btnSubmit">Enviar</button>
+                    <button type="submit" id="btnSubmit">Enviar</button>
                 </div>
             </fieldset>
         </form>
