--- a/sucesso.html
+++ b/sucesso.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUCESSO</title>
-</head>
+    <script src="./js/script-sucesso.js" defer></script>
 <body>
     <h1>SUCESSO</h1>
+    <h2>Bem vindo - <span id="bem-vindo">FULANO</span></h2>
+    <div>
+        <a href="./index.html">Home</a> | <a href="#" id="logout-user">Logout</a>
+    </div>
 </body>
 </html>
