--- a/erro.html
+++ b/erro.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERRO</title>
 </head>
 <body>
-    <h1>Erro</h1>
+    <h1>ERRO</h1>
 </body>
 </html>
