--- a/sucesso.html
+++ b/sucesso.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sucesso</title>
+    <title>SUCESSO</title>
+    <script src="./js/script-sucesso.js" defer></script>
 </head>
 <body>
-    <h1>Sucesso</h1>
+    <h1>SUCESSO</h1>
+    <h2>Bem Vindo - <span id="bem-vindo">FULANO</span></h2>
+    <div>
+        <a href="./index.html">Home</a> | <a href="#" id="logout-user">Logout...</a>
+    </div>
 </body>
 </html>
