--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
 
 <body>
     
-    <header id="topo">
-        <h1 id="titulo">JavaScript</h1>
-        <nav>
-            <ul>
-                <li class="link"><a href="#">JavaScript</a></li>
-                <li class="link"><a href="#">Java</a></li>
-                <li class="link"><a href="#">C#</a></li>
-            </ul>
-        </nav>
-    </header> 
 
     <div>
         <h2>VALIDAÇÃO</h2>
@@ -35,11 +25,15 @@
                     <legend>LOGIN</legend>
                     <div>
                         <label for="idEmail">Email</label>
-                        <input type="email" name="txtEmail" id="idEmail" placeholder="Digite seu email">
+                        <input type="email" name="txtEmail" id="idEmail" placeholder="Digite seu email" minlength="8" oninvalid="this.setCustomValidity('Caractéres insuficientes!')" required>
                     </div>
                     <div>
                         <label for="idSenha">Senha</label>
-                        <input type="password" name="txtSenha" id="idSenha" placeholder="Digite sua senha">
+                        <input type="password" name="txtSenha" id="idSenha" placeholder="Digite sua senha" minlength="6" maxlength="8"   pattern="[A-Za-z0-9]{8}" oninvalid="this.setCustomValidity('Este campo não aceita caractéres especiais - * % # $!')" required>
+                    </div>
+                    <div>
+                        <label for="idCpf">CPF</label>
+                        <input type="text" name="txtCpf" id="idCpf" placeholder="Digite seu CPF" oninvalid="this.setCustomValidity('Este campo possui 9 digitos e só aceita números.')" pattern="[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}" required minlength="14" maxlength="14">
                     </div>
                     <div>
                         <input type="checkbox" name="txtLembrar" id="idLembrar" value="lembrete" checked>
