--- a/sucesso.html
+++ b/sucesso.html
@@ -7,10 +7,20 @@
     <script src="./js/script-sucesso.js" defer></script>
 </head>
 <body>
-    <h1>SUCESSO</h1>
-    <h2>Bem Vindo - <span id="bem-vindo">FULANO</span></h2>
-    <div>
-        <a href="./index.html">Home</a> | <a href="#" id="logout-user">Logout...</a>
-    </div>
+    <header id="topo">
+        <h1 id="titulo">JavaScript</h1>
+        <nav>
+            <ul>
+                <li class="link"><a href="#">JavaScript</a></li>
+                <li class="link"><a href="#">Java</a></li>
+                <li class="link"><a href="#">C#</a></li>
+            </ul>
+        </nav>
+        <div>
+            <a href="./index.html">Home</a> | <a href="#" id="logout-user">Logout...</a>
+        </div>
+        <h2>Bem Vindo - <span id="bem-vindo">FULANO</span></h2>
+    </header> 
+
 </body>
 </html>
