--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
                     <legend>LOGIN</legend>
                     <div>
                         <label for="idEmail">Email</label>
-                        <input type="email" name="txtEmail" id="idEmail" placeholder="Digite seu email">
+                        <input type="email" name="txtEmail" id="idEmail" placeholder="Digite seu email" minlength="8" oninvalid="this.setCustomValidity('caracteres insuficientes')">
                     </div>
                     <div>
                         <label for="idSenha">Senha</label>
-                        <input type="password" name="txtSenha" id="idSenha" placeholder="Digite sua senha">
+                        <input type="password" name="txtSenha" id="idSenha" placeholder="Digite seu CPF" minlength="8" pattern="[A-Za-z0-9]{8}">
+                    </div>
+                    <div>
+                        <label for="idSenha">CPF</label>
+                        <input type="password" name="txtCPF" id="idCPF" placeholder="Digite sua senha" minlength="8" pattern="[0-9]{11}">
                     </div>
                     <div>
                         <input type="checkbox" name="txtLembrar" id="idLembrar" value="lembrete" checked>
