--- a/sucesso.html
+++ b/sucesso.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUCESSO</title>
+    <script src="./js/script-sucesso.js" defer></script>
 </head>
 <body>
-    <h1>SUCESSO</h1>
+    <header id="topo">
+        <h1 id="titulo">JavaScript</h1>
+        <nav>
+            <ul>
+                <li class="link"><a href="#">JavaScript</a></li>
+                <li class="link"><a href="#">Java</a></li>
+                <li class="link"><a href="#">C#</a></li>
+            </ul>
+        </nav>
+        <div>
+            <a href="./index.html">Home</a> | <a href="#" id="logout-user">Logout...</a>
+        </div>
+        <h2>Bem Vindo - <span id="bem-vindo">FULANO</span></h2>
+    </header> 
+
 </body>
 </html>
