tag dialog adicionada

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   </head>
 
   <body>
-    <div>
+    
       <h2>VALIDAÇÃO</h2>
+
+      <button id="btnlogin"></button>
+
+      <dialog>
       <div>
         <span class="valida"></span>
       </div>
@@ -81,6 +85,7 @@
           </fieldset>
         </form>
       </div>
-    </div>
+    </dialog>
+    
   </body>
 </html>
