pogchampions da Silva

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
   </head>
 
   <body>
-    <div>
+    
       <h2>VALIDAÇÃO</h2>
+
+      <button id="btnLogin">LOGIN</button>
+
+      <dialog>
       <div>
         <span class="valida"></span>
       </div>
       <div>
+        <button id="btnClose"> X </button>
         <form
           action="./index.html"
           method="get"
@@ -81,6 +86,7 @@
           </fieldset>
         </form>
       </div>
-    </div>
+    </dialog>
+
   </body>
 </html>
