--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     
       <h2>VALIDAÇÃO</h2>
 
-      <button id="btnlogin"></button>
+      <button id="btnLogin">LOGIN</button>
 
       <dialog>
       <div>
         <span class="valida"></span>
       </div>
       <div>
+        <button id="btnClose">X</button>
         <form
           action="./index.html"
           method="get"
@@ -86,6 +87,6 @@
         </form>
       </div>
     </dialog>
-    
+
   </body>
 </html>
