--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
       <button id="btnLogin">LOGIN</button>
 
+        <div id="relogio"></div>
+
+        <div>
+          <button id="btnLiga">LIGA</button>
+          <button id="btnDesliga">DESLIGA</button>
+        </div>
+
       <dialog>
       <div>
         <span class="valida"></span>
