começando o trabalho de front

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     </div>
                     <div>
                         <label for="idSenha">Senha</label>
-                        <input type="password" name="txtSenha" id="idSenha" placeholder="Digite seu CPF" minlength="8" pattern="[A-Za-z0-9]{8}">
+                        <input type="password" name="txtSenha" id="idSenha" placeholder="Digite seu senha" minlength="8" pattern="[A-Za-z0-9]{8}">
                     </div>
                     <div>
-                        <label for="idSenha">CPF</label>
-                        <input type="password" name="txtCPF" id="idCPF" placeholder="Digite sua senha" minlength="8" pattern="[0-9]{11}">
+                        <label for="idCPF">CPF</label>
+                        <input type="password" name="txtCPF" id="idCPF" placeholder="Digite sua CPF" minlength="8" pattern="[0-9]{11}">
                     </div>
                     <div>
                         <input type="checkbox" name="txtLembrar" id="idLembrar" value="lembrete" checked>
